--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,31 @@
 
   <Button
     android:id="@+id/btn_main_open_rct_page"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
+    android:layout_marginTop="28dp"
     android:text="Open RCT Page!"
-    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <Button
+    android:id="@+id/btn_main_di_test"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:text="Test Dagger2!"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/btn_main_open_rct_page" />
+
   <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/text_main_app_id"
-    tools:text="测试appId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="28dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+    app:layout_constraintStart_toStartOf="parent"
+    tools:text="测试appId" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
