--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,15 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/btn_main_open_rct_page" />
 
+  <Button
+    android:id="@+id/btn_main_user_info"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:text="User Info!"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/btn_main_di_test" />
+
   <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/text_main_app_id"
     android:layout_width="wrap_content"
