--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
+  <androidx.appcompat.widget.AppCompatImageView
+    android:id="@+id/img_main"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:scaleType="centerCrop"
+    android:src="@mipmap/ic_home"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
   <Button
     android:id="@+id/btn_main_open_rct_page"
     android:layout_width="200dp"
@@ -14,7 +24,7 @@
     android:text="Open RCT Page!"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@id/img_main" />
 
   <Button
     android:id="@+id/btn_main_di_test"
