--- a/android/app/src/main/res/layout/activity_splash.xml
+++ b/android/app/src/main/res/layout/activity_splash.xml
@@ -3,15 +3,15 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/color_red">
+  android:background="@color/color_3A3A3A">
 
   <androidx.appcompat.widget.AppCompatTextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="60dp"
+    android:layout_marginTop="@dimen/px60"
     android:text="supreme"
     android:textColor="@color/white"
-    android:textSize="56dp"
+    android:textSize="@dimen/px56"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -20,9 +20,19 @@
   <androidx.appcompat.widget.AppCompatTextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@color/white"
+    android:layout_marginBottom="@dimen/px28"
     android:text="Kotlin OKHttp RCT MVP Dagger ARouter"
-    android:layout_marginBottom="28dp"
+    android:textColor="@color/white"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
+
+  <androidx.appcompat.widget.AppCompatButton
+    android:id="@+id/btn_splash_open_home"
+    android:layout_width="@dimen/px220"
+    android:layout_height="@dimen/px80"
+    android:text="HOME"
+    android:layout_marginBottom="@dimen/px180"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
