--- a/android/app/src/main/res/layout/activity_splash.xml
+++ b/android/app/src/main/res/layout/activity_splash.xml
@@ -31,10 +31,20 @@
     android:id="@+id/btn_splash_open_home"
     android:layout_width="@dimen/px220"
     android:layout_height="@dimen/px80"
-    android:text="HOME"
     android:layout_marginBottom="@dimen/px180"
+    android:text="HOME"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
+
+  <View
+    android:id="@+id/view_test"
+    android:layout_width="0dp"
+    android:layout_height="@dimen/px80"
+    android:layout_marginTop="@dimen/px2"
+    android:background="@color/white"
+    app:layout_constraintEnd_toEndOf="@id/btn_splash_open_home"
+    app:layout_constraintStart_toStartOf="@id/btn_splash_open_home"
+    app:layout_constraintTop_toBottomOf="@id/btn_splash_open_home" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
